--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,10 @@ edition = "2018"
 cortex-m = "^0.6.0"
 cortex-m-rt = "0.6.11"
 stm32h7 = "0.9.0"
-#stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743"] }
-
-
-
-# TODO these should really be [dev-dependencies] ?
+stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743"] }
+cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
 panic-itm = "~0.4.1"
-cortex-m-log = { version = "~0.6", features = ["itm"] }
 
-[dependencies.stm32h7xx-hal]
-version =  "0.3.0"
-features = ["stm32h743"]
 
 [profile.dev]
 codegen-units = 1 # better optimizations
