--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ stm32h7 = "0.9.0"
 stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743"] }
 cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
 panic-itm = "~0.4.1"
+embedded-hal = "0.2.3"
+
+
+
 
 
 [profile.dev]
