--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,18 @@ cmsis-rtos2 = { path = "../cmsis_rtos2_rs" }
 cty = "0.2.1"
 cortex-m = "^0.6.0"
 cortex-m-rt = "0.6.11"
-stm32h7 = "0.9.0"
-stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743"] }
+
+
 cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
 panic-itm = "~0.4.1"
 embedded-hal = "0.2.3"
 
 
-
-
+# Cortex-M family specialization:
+stm32h7 = "0.9.0"
+stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"] }
+# stm32f4 = "0.9.0"
+# stm32f4xx-hal = { version ="0.6.0", features = ["stm32f401", "rt"] }
 
 [profile.dev]
 codegen-units = 1 # better optimizations
