--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,17 @@ cortex-m-rt = "0.6.11"
 
 
 cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
-panic-itm = "~0.4.1"
+#panic-itm = "~0.4.1"
+panic-semihosting = "0.5.3"
+
 embedded-hal = "0.2.3"
 
 
 # Cortex-M family specialization:
-stm32h7 = "0.9.0"
-stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"] }
-# stm32f4 = "0.9.0"
-# stm32f4xx-hal = { version ="0.6.0", features = ["stm32f401", "rt"] }
+#stm32h7 = "0.9.0"
+#stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"] }
+ stm32f4 = {version = "0.9.0", features = ["stm32f401"] }
+ stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }
 
 [profile.dev]
 codegen-units = 1 # better optimizations
