--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,7 +1,4 @@
-# Sample OpenOCD configuration for the NUCLEO-STM32H743ZI2 board
-
-# Depending on the hardware revision you got you'll have to pick ONE of these
-# interfaces. At any time only one interface should be commented out.
+# OpenOCD configuration for the stm32f401xx  board
 
 # latest stlink revision
 source [find interface/stlink.cfg]
@@ -9,5 +6,4 @@ source [find interface/stlink.cfg]
 transport select hla_swd
 
 # board configuration file
-# source [find target/stm32h7x.cfg]
 source [find target/stm32f4x.cfg]
