--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ cortex-m-rt = "0.6.11"
 cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
 #panic-itm = "~0.4.1"
 panic-semihosting = "0.5.3"
+cortex-m-semihosting = "0.3.5"
+
 
 embedded-hal = "0.2.3"
 
