--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ cty = "0.2.1"
 cortex-m = "^0.6.0"
 cortex-m-rt = "0.6.11"
 
+freertos_rsbuild = {path = "../freertos_rsbuild", features=["stm32f7x"]}
 #cmsis-rtos2 = { path = "../cmsis_rtos2_rs" }
-cmsis-rtos2  = { git = "https://github.com/tstellanova/cmsis_rtos2_rs.git" }
+#cmsis-rtos2  = { git = "https://github.com/tstellanova/cmsis_rtos2_rs.git" }
 
 cortex-m-log = { version = "0.6.1", features = ["log-integration", "itm", "semihosting"] }
 #panic-itm = "~0.4.1"
@@ -26,8 +27,12 @@ embedded-hal = "0.2.3"
 # Cortex-M family specialization:
 #stm32h7 = "0.9.0"
 #stm32h7xx-hal = { version = "0.3.0", features = ["stm32h743", "rt"] }
-stm32f4 = {version = "0.9.0", features = ["stm32f401"] }
-stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }
+#stm32f4 = {version = "0.9.0", features = ["stm32f401"] }
+#stm32f4xx-hal = { version =" 0.6.0", features = ["stm32f401", "rt"] }
+
+stm32f7 = {version = "0.11.0"}
+stm32f7xx-hal = { git="https://github.com/stm32-rs/stm32f7xx-hal", features= ["stm32f765","rt"] }
+
 
 [profile.dev]
 codegen-units = 1 # better optimizations
