--- a/.cargo/config
+++ b/.cargo/config
@@ -1,9 +1,10 @@
 [target.thumbv7em-none-eabihf]
-runner = 'arm-none-eabi-gdb'
+#runner = 'arm-none-eabi-gdb'
+runner = "arm-none-eabi-gdb -q -x segger.gdb"
+
+
 rustflags = [
   "-C", "link-arg=-Tlink.x", # LDD
-  # "-C", "link-arg=-Wl,-Tlink.x", # GCC
-  # "-C", "linker=arm-none-eabi-gcc", # GCC
 ]
 
 [build]
